--- a/index.html
+++ b/index.html
@@ -4,14 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/pages/home.css">
+    <link rel="stylesheet" href="./css/pages/home.css">
     <title>Document</title>
 </head>
 <body>
     <main>
-        <section>Hero section</section>
-        <section>Main content</section>
+        <section class="container bg-main">
+            <div class="row-short">
+                Hero section Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis animi doloribus dolores, tempora accusamus maiores deleniti excepturi architecto iste. Explicabo sit nam impedit dolorum, laudantium omnis aperiam accusantium molestias fugiat?
+            </div>
+        </section>
+        <section class="container">
+            <div class="row">
+                Main content Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, asperiores nisi ratione, laboriosam ipsum corporis quas at aut, suscipit qui iste. Maiores nostrum laudantium necessitatibus beatae assumenda quos praesentium exercitationem!
+            </div>
+        </section>
     </main>
-    <footer>Foooter section</footer>
+    <footer class="container bg-main">
+        <div class="row"> 
+            Socials Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque fugiat sint quasi veniam! Ipsam, quae tempora nulla aliquam, non esse reiciendis ipsa iure dolor delectus eius, maiores repellendus mollitia deleniti.
+        </div>
+        <div class="row-short"> 
+        Foooter bottom Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id sunt cum beatae! Odio quod quisquam eveniet reprehenderit ex debitis consequatur! Asperiores libero quia quisquam cum facilis dolorum sed architecto aliquid.
+        </div>
+    </footer>
 </body>
 </html>
