--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <main>
         <section class="container bg-main">
             <div class="row-short">
-                Hero section Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis animi doloribus dolores, tempora accusamus maiores deleniti excepturi architecto iste. Explicabo sit nam impedit dolorum, laudantium omnis aperiam accusantium molestias fugiat?
+                <img class="logo" src="./img/logo.png" alt="Logo">
+                <h1 class="main-title">Coming soon</h1>
+                <p class="main-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur animi error excepturi totam nesciunt quos corrupti nostrum ipsum aliquam expedita.</p>
             </div>
         </section>
         <section class="container">
