--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
         </section>
         <section class="container">
             <div class="row">
-                Main content Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, asperiores nisi ratione, laboriosam ipsum corporis quas at aut, suscipit qui iste. Maiores nostrum laudantium necessitatibus beatae assumenda quos praesentium exercitationem!
+                <div class="column">
+                    <h2>About startup</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, soluta. Tenetur tempora modi obcaecati cupiditate earum, aperiam necessitatibus cumque quas atque exercitationem perferendis, ipsum sint placeat deserunt quo a adipisci.</p>
+                </div>
+                <div class="column right-column">
+                    <h2>Have any question?</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime voluptatum architecto eaque ratione, ut id quod velit reprehenderit veritatis. Officia ipsam consequuntur, dolores quam similique maxime maiores mollitia tenetur voluptate!</p>
+                </div>
             </div>
         </section>
     </main>
