--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
     </main>
     <footer class="container bg-main">
         <div class="row"> 
-            Socials Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque fugiat sint quasi veniam! Ipsam, quae tempora nulla aliquam, non esse reiciendis ipsa iure dolor delectus eius, maiores repellendus mollitia deleniti.
+            <a class=" fa fa-facebook"href="#"></a>
+            <a class=" fa fa-twitter"href="#"></a>
+            <a class=" fa fa-dribbble"href="#"></a>
+            <a class=" fa fa-tumblr"href="#"></a>
+            <a class=" fa fa-linkedin"href="#"></a>
+            <a class=" fa fa-instagram"href="#"></a>
+            <a class=" fa fa-wifi"href="#"></a>
         </div>
         <div class="row-short"> 
         Foooter bottom Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id sunt cum beatae! Odio quod quisquam eveniet reprehenderit ex debitis consequatur! Asperiores libero quia quisquam cum facilis dolorum sed architecto aliquid.
