--- a/index.html
+++ b/index.html
@@ -48,7 +48,13 @@
             <a class=" fa fa-wifi"href="#"></a>
         </div>
         <div class="row-short"> 
-        Foooter bottom Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id sunt cum beatae! Odio quod quisquam eveniet reprehenderit ex debitis consequatur! Asperiores libero quia quisquam cum facilis dolorum sed architecto aliquid.
+            <img class="footer-logo" src="./img/logo-white.png" alt="Logo">
+            <div class="text-trio">
+                <p>Copyright &copy; 2023 <a href="#">Matrox</a></p>
+                <p>All rights reserved</p>
+                <p>Designed by <a href="#" targer="_blank">TrendyTheme</a> </p>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus,  repellendus ipsam maiores <a href="#">Matrox</a> omnis ullam, laudantium quasi deleniti  laboriosam. Soluta, quibusdam magni est praesentium <a href="#">Matrox</a> iure a illum!</p>
         </div>
     </footer>
 </body>
