--- a/index.html
+++ b/index.html
@@ -47,6 +47,33 @@
                 <div class="column">
                     <h2>About startup</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, soluta. Tenetur tempora modi obcaecati cupiditate earum, aperiam necessitatibus cumque quas atque exercitationem perferendis, ipsum sint placeat deserunt quo a adipisci.</p>
+                    <div class="progress-bar">
+                        <div class="top">
+                            <div class="label">UX Design</div>
+                            <div class="value">90%</div>
+                        </div>
+                        <div class="bottom">
+                            <div style="width: 90%;" class="progress"></div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="top">
+                            <div class="label">WEB Design</div>
+                            <div class="value">86%</div>
+                        </div>
+                        <div class="bottom">
+                            <div style="width: 86%;" class="progress"></div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="top">
+                            <div class="label">Web Development</div>
+                            <div class="value">50%</div>
+                        </div>
+                        <div class="bottom">
+                            <div style="width: 50%;"class="progress"></div>
+                        </div>
+                    </div>
                 </div>
                 <div class="column right-column">
                     <h2>Have any question?</h2>
