--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                 </div>
             </div>
         </section>
-        <section class="container">
+        <section class="container main-content">
             <div class="row">
                 <div class="column">
-                    <h2>About startup</h2>
+                    <h2 class="btn-round">About startup</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, soluta. Tenetur tempora modi obcaecati cupiditate earum, aperiam necessitatibus cumque quas atque exercitationem perferendis, ipsum sint placeat deserunt quo a adipisci.</p>
                     <div class="progress-bar">
                         <div class="top">
@@ -53,7 +53,9 @@
                             <div class="value">90%</div>
                         </div>
                         <div class="bottom">
-                            <div style="width: 90%;" class="progress"></div>
+                            <div class="progress">
+                                <div class="bar"></div>
+                            </div>
                         </div>
                     </div>
                     <div class="progress-bar">
@@ -62,7 +64,9 @@
                             <div class="value">86%</div>
                         </div>
                         <div class="bottom">
-                            <div style="width: 86%;" class="progress"></div>
+                            <div style="width: 86%;" class="progress">
+                                <div class="bar"></div>
+                            </div>
                         </div>
                     </div>
                     <div class="progress-bar">
@@ -71,10 +75,12 @@
                             <div class="value">50%</div>
                         </div>
                         <div class="bottom">
-                            <div style="width: 50%;"class="progress"></div>
+                            <div style="width: 50%;"class="progress">
+                            <div class="bar"></div>
                         </div>
                     </div>
                 </div>
+            </div>
                 <div class="column right-column">
                     <h2>Have any question?</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime voluptatum architecto eaque ratione, ut id quod velit reprehenderit veritatis. Officia ipsam consequuntur, dolores quam similique maxime maiores mollitia tenetur voluptate!</p>
