--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
                 <div class="column right-column">
                     <h2>Have any question?</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime voluptatum architecto eaque ratione, ut id quod velit reprehenderit veritatis. Officia ipsam consequuntur, dolores quam similique maxime maiores mollitia tenetur voluptate!</p>
+                    <form class="form">
+                        <label for="name">Name</label>
+                        <input id="name" type="text" placeholder="Name">
+                        <label for="email">Email</label>
+                        <input id="email" type="email" placeholder="Email">
+                        <label for="message">Message</label>
+                        <textarea id="message" placeholder="Message"></textarea>
+                        <button>Send message</button>
+                    </form>
                 </div>
             </div>
         </section>
