--- a/index.html
+++ b/index.html
@@ -87,26 +87,29 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime voluptatum architecto eaque ratione, ut id quod velit reprehenderit veritatis. Officia ipsam consequuntur, dolores quam similique maxime maiores mollitia tenetur voluptate!</p>
                     <form class="form">
                         <label for="name">Name</label>
-                        <input id="name" type="text" placeholder="Name">
+                        <input id="name" type="text" placeholder="Name" autocomplete="name" required>
                         <label for="email">Email</label>
-                        <input id="email" type="email" placeholder="Email">
+                        <input id="email" type="email" placeholder="Email" autocomplete="email" required>
                         <label for="message">Message</label>
-                        <textarea id="message" placeholder="Message"></textarea>
-                        <button>Send message</button>
+                        <textarea id="message" placeholder="Message" required></textarea>
+                        <button class="btn" type="submit">Send message</button>
                     </form>
                 </div>
             </div>
         </section>
     </main>
     <footer class="container bg-main">
-        <div class="row socials"> 
-            <a class=" fa fa-facebook"href="#"></a>
-            <a class=" fa fa-twitter"href="#"></a>
-            <a class=" fa fa-dribbble"href="#"></a>
-            <a class=" fa fa-tumblr"href="#"></a>
-            <a class=" fa fa-linkedin"href="#"></a>
-            <a class=" fa fa-instagram"href="#"></a>
-            <a class=" fa fa-wifi"href="#"></a>
+        <div class="row">
+            <div class="socials">
+                <a class=" fa fa-facebook"href="#"></a>
+                <a class=" fa fa-twitter"href="#"></a>
+                <a class=" fa fa-dribbble"href="#"></a>
+                <a class=" fa fa-tumblr"href="#"></a>
+                <a class=" fa fa-linkedin"href="#"></a>
+                <a class=" fa fa-instagram"href="#"></a>
+                <a class=" fa fa-wifi"href="#"></a>
+            </div>
+            <a class="btn btn-circle fa fa-angle-up" href="#"></a>
         </div>
         <div class="row-short"> 
             <img class="footer-logo" src="./img/logo-white.png" alt="Logo">
@@ -118,5 +121,6 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus,  repellendus ipsam maiores <a href="#">Matrox</a> omnis ullam, laudantium quasi deleniti  laboriosam. Soluta, quibusdam magni est praesentium <a href="#">Matrox</a> iure a illum!</p>
         </div>
     </footer>
+    <div class="back-to-top"></div>
 </body>
 </html>
